force-app/main/default/objects/Advertising_Summary_Snapshot__c/Advertising_Summary_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Advertising Summary Snapshot</label>
    <nameField>
        <displayFormat>AdSnap{0000000000}</displayFormat>
        <label>Opportunity Snapshot Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advertising Summary Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>