force-app/main/default/objects/Advertising_Summary_Snapshot__c/fields/Split_Owner__c.field-meta.xml
<CustomField>
    <fullName>Split_Owner__c</fullName>
    <label>Split Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>