force-app/main/default/objects/Advertising_Summary_Snapshot__c/fields/Split_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Split_Owner_Region__c</fullName>
    <label>Split Owner Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>