force-app/main/default/objects/Advertising_Summary_Snapshot__c/fields/Weighted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Revenue__c</fullName>
    <label>Weighted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>